# datastar-tmp

./: README.md  app.py  bot.py  pyproject.toml
static/css/: main.css
templates/: index.html
